--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,7 +1,16 @@
 [bumpversion]
-current_version = 1.0.0
-commit = True
-tag = True
+current_version = 0.8.0-dev
+parse = (?P<mayor>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)\-(?P<release>.*)
+serialize =
+  {mayor}.{minor}.{patch}-{release}
+  {mayor}.{minor}.{patch}
+commit = False
+tag = False
+
+[bumpversion:part:release]
+values =
+  dev
+  pre
 
 [bumpversion:file:setup.py]
 
