--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -15,6 +15,7 @@ include CHANGELOG.rst
 include CONTRIBUTING.rst
 include LICENSE
 include README.rst
+include requirements.txt
 
 include tox.ini .travis.yml appveyor.yml
 
