--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -17,7 +17,7 @@ include LICENSE
 include README.rst
 include TODO.rst
 include requirements.txt
-include requirements-dev,txt
+include requirements-dev.txt
 
 include tox.ini .travis.yml appveyor.yml
 
