--- a/ci/templates/tox.ini
+++ b/ci/templates/tox.ini
@@ -101,7 +101,7 @@ deps = coverage
 skip_install = true
 usedevelop = false
 commands =
-    coverage combine --append
+    -coverage combine --append
     coverage report
     coverage html
 
