--- a/ci/templates/tox.ini
+++ b/ci/templates/tox.ini
@@ -84,7 +84,7 @@ deps =
 skip_install = true
 usedevelop = false
 commands =
-    coverage xml --ignore-errors
+    -coverage xml --ignore-errors
     codecov []
 
 
