--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,11 @@ matrix:
       language: generic
       env:
         - TOXENV=3.5-nocov-osx
+
+    - os: linux
+      python: "3.6"
+      env:
+        - TOXENV=3.6-cover-linux,report,extension-coveralls,coveralls,codecov
     - os: osx
       python: "3.6"
       language: generic
