--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -9,6 +9,7 @@ include .cookiecutterrc
 include .editorconfig
 include .isort.cfg
 include .readthedocs.yml
+include pytest.ini
 
 include AUTHORS.rst
 include CHANGELOG.rst
