--- a/ci/templates/.travis.yml
+++ b/ci/templates/.travis.yml
@@ -47,8 +47,12 @@ before_install:
   - |
     if [[ $TRAVIS_OS_NAME == 'windows' ]]; then
         choco install python --version "$PYTHON_VERS"
+        echo "\n\n$PATH\n\n"
         python --version
         python3 --version
+        python37 --version
+        echo ""
+        sleep 1
         pip3 install --upgrade pytest
         pip3 install codecov
     fi
