--- a/ci/templates/.travis.yml
+++ b/ci/templates/.travis.yml
@@ -47,6 +47,7 @@ before_install:
   - |
     if [[ $TRAVIS_OS_NAME == 'windows' ]]; then
         choco install python --version "$PYTHON_VERS"
+        alias python=$PYTHON_HOME/python.exe
         python --version
         $PYTHON_HOME/python --version
         $PYTHON_HOME/python3 --version
