--- a/ci/templates/.travis.yml
+++ b/ci/templates/.travis.yml
@@ -24,12 +24,22 @@ jobs:
 {%- else %}{{ '' }}
       python: '{{ "{0[2]}.{0[3]}".format(env) }}'
 {%- endif %}
-{%- if env in  ['py38-nocov'] %}{{ '' }}
     - os: osx
+      osx_image: xcode11.2
       language: generic
       env:
-        - TOXENV={{ env }}
-        - PYTHON_VERS={{ "{0[2]}.{0[3]}".format(env) }}
+        - TOXENV=py37-nocov
+    - os: osx
+      osx_image: xcode10.1
+      language: generic
+      env:
+        - TOXENV=py37-nocov
+    - os: osx
+      osx_image: xcode9.4
+      language: generic
+      env:
+        - TOXENV=py35-nocov
+{%- if env in  ['py38-nocov'] %}{{ '' }}
     - os: windows
       language: shell
       env:
@@ -41,7 +51,8 @@ jobs:
 {%- endif %}{{ '' }}
 {%- endfor %}{{ '' }}
   allow_failures:
-    os: windows
+    - os: windows
+    - env: TOXENV=docs
 before_install:
   - python --version
   - uname -a
@@ -55,12 +66,9 @@ before_install:
     fi
   - |
     if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
-      eval "$(pyenv init -)"
-      pyenv rehash
-      pyenv install "$PYTHON_VERS"-dev
-      pyenv global "$PYTHON_VERS"-dev
       python --version
       pip --version
+      export TOXENV="py$(python -c 'import sys;print(\'{0}{1}\'.format(sys.version_info.major, sys.version_info.minor))')-nocov"
     fi
 install:
   - python -mpip install --progress-bar=off tox -r ci/requirements.txt
@@ -69,7 +77,7 @@ install:
   - pip --version
   - tox --version
 script:
-    - tox -v
+  - tox -v
 after_failure:
   - more .tox/log/* | cat
   - more .tox/*/log/* | cat
